# KLO_Chords

./: .gitignore  CHANGELOG.md  README.md  environment.yml  nul)  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: build.yml
experiments/: dgen_p1.py  dgen_p2.py  fbgen_p1.py  fbgen_p2.py  pgen_p1.py  pgen_p2.py  process_log_chord_box.md  process_log_earth_tones.md  process_log_fretboard.md  process_log_piano.md  process_log_theme.md  pyside6_chord_box.py  pyside6_demo.py  pyside6_fretboard.py  pyside6_piano.py  pyside6_theme.py
src/klo_chord_sample/: __init__.py  chord_box.py  chord_shapes.py  chords.py  fretboard.py  gui.py  piano.py  state.py  theme.py
src/klo_chord_sample/assets/chords/: guitar_standard.json
src/klo_chords/: __init__.py  __main__.py  chord_box.py  chord_shapes.py  chord_suggestions.py  chords.py  dpg_keyboard.py  drag_drop.py  fretboard.py  gui.py  midi_tab.py  piano.py  prefs.py  quality.py  sound.py  state.py  theme.py  undo_manager.py
src/klo_chords/assets/chords/: guitar_standard.json
src/klo_chords/audio/: __init__.py  midi_engine.py  sound.py
src/klo_chords/callbacks/: __init__.py
src/klo_chords/core/: __init__.py  chord_shapes.py  chord_suggestions.py  chords.py  constants.py  prefs.py  quality.py
src/klo_chords/gui/: __init__.py  app.py
src/klo_chords/helpers/: __init__.py  console_logging.py
src/klo_chords/rendering/: __init__.py  chord_box.py  fretboard.py  piano.py  theme.py
src/klo_chords/state/: __init__.py
src/klo_chords/widgets/: __init__.py  dpg_keyboard.py
tests/: __init__.py  conftest.py  test_chord_shapes.py  test_chord_suggestions.py  test_chords.py  test_console_logging.py  test_prefs.py  test_quality.py  test_undo_manager.py
utils/: test_keys.py
wiki/: Developer-Guide.md  Features-Guide.md  Home.md  Keyboard-Shortcuts.md
