[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klo-chords"
version = "0.5.5"
description = "Chord theory tool with sound engine, piano keyboard, and progression builder."
requires-python = ">=3.11"
dependencies = ["dearpygui", "sounddevice", "numpy", "python-rtmidi"]

[project.scripts]
klo-chords = "klo_chords.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
klo_chords = ["assets/fonts/verdana.ttf", "assets/fonts/NotoSans-Regular.ttf", "assets/chords/*.json", "assets/icons/*.ico"]
